--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -26,6 +26,7 @@ input[type="date"]:focus-within {
   outline: 0.25rem solid var(--surface-secondary);
   border: 0.125rem solid var(--stroke-highlight);
   outline-offset: 0.1px;
+  margin-bottom: -2px;
 }
 
 input[type="date"] {
@@ -51,4 +52,21 @@ input[type="date"] {
 select {
   background: url(../../assets/icons/arrow-down-01.svg) 
   no-repeat calc(100% - 1rem);
+}
+
+.address .flex {
+  gap: 1.25rem;
+}
+
+.input-wrapper:has([disabled]) {
+  opacity: 0.5;
+}
+
+input {
+  &[disabled] {
+    background-color: var(--surface-disabled);
+
+    border: 1psx solid var(--stroke-default);
+    color: var(--text-primary);
+  }
 }
